tdf#104440 sw: fix layout inconsistency with dynamic wrapping and undo

The problem was that the second fly frame was placed on the first page
initially, but after typing a character (which moved it to the second
page) and then undoing, it wasn't moved back.

Fix the inconsistency by handling the "fly frame takes all horizontal
space" case as parallel wrapping (which will result in no wrapping at
the end), this way the second fly frame appears on the second page both
initially and after editing.

As an additional data point, the DOC export of the bugdoc is now
rendered in Word the same way as in Writer.

Change-Id: Ifc9f17458ad0501b8ab6077e5a4998d48fd6f1d8